--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "clsx": "^1.1.1",
+    "prop-type": "0.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
