--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "moment": "^2.29.1",
     "prop-type": "0.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
